# sowar

./: .gitignore  README.md  dev.ts  index.html  main.js  package.json  server.ts  site.toml  sowar_toplevel.bc.js  style.css  tsconfig.json
.github/workflows/: deploy.yml
public/: index.html  style.css
scripts/: build.ts  inject-meta.ts
src/: TODO.md  declarations.d.ts  env.d.ts  globals.d.ts  index.html  input.css  language.ts  main.ts
src/compiler/: .gitignore  README.md  dune  dune-project  sowar_toplevel.ml  sowar_toplevel.opam
src/core/: compiler.ts  editor.ts  elements.ts  markdown.ts  router.ts  runner.ts  store.ts  theme.ts  types.ts
src/exercises/: registry.ts  testHarness.ml  tests.ts
src/exercises/01_hello_world/: index.ts  problem.md  template.md  test.ml
src/exercises/02_ints_vs_floats/: index.ts  problem.md  template.ml  test.ml
src/exercises/03_currying/: index.ts  problem.md  template.ml  test.ml
src/exercises/03_functions/: index.ts  problem.md  template.ml
src/exercises/04_conditionals/: index.ts  problem.md  template.ml
src/exercises/04_currying/: index.ts
src/exercises/05_currying/: problem.md  solution.ml  test.ml
src/exercises/06_pure_functions/: index.ts
src/exercises/1.1_hello_world/: problem.md  template.ml  test.ml
src/exercises/1.2_ints_vs_floats/: index.ts  problem.md  solution.ml  template.ml  test.ml
src/ui/: branding.ts  clearConfirmation.ts  confetti.ts  footer.ts  icons.ts  navigation.ts  popup.ts  progressBar.ts  resetEditorText.ts  resetProgress.ts  resize.ts  shortcuts.ts  sidebar.ts  status.ts  tabs.ts
(+20 files in other folders)
