(executable
 (name sowar_toplevel)
 (modes js)
 (libraries
   ;js_of_ocaml
   js_of_ocaml-toplevel
   ;js_of_ocaml-compiler.dynlink
   )
 (preprocess (pps js_of_ocaml-ppx))
 (link_flags (:standard -linkall))
 (js_of_ocaml
   (flags (
     :standard
     --toplevel
     --disable=effects
     --export=export.txt
     ))
   (javascript_files export.txt)));
