(lang dune 3.20)

(name sowar_toplevel)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")
(maintainers "Maintainer Name <maintainer@example.com>")

(package
(name sowar_toplevel)
 (synopsis "Browser-based OCaml exercises")
 (license MIT)
 (depends
  (ocaml (= 5.2.0))
  (dune (>= 3.20))
  (js_of_ocaml (>= 6.0.0))
  (js_of_ocaml-toplevel (>= 6.0.0))
  (js_of_ocaml-compiler (>= 6.0.0))
  (js_of_ocaml-ppx (>= 6.0.0))))
